# cat-llm

./: .gitignore  .zenodo.json  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MASTERPLAN.md  README.md  index.html  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
academic_examples/: README.md  academic_examples.Rproj  catllm.bib  explore_corpus_ucnets.py  extract_multi_class_ucnets.py  multi_class_diagram.ipynb  paper.html  paper.md  web_search_diagram.ipynb
app/: MASTERPLAN_DESKTOP.md  main.py  requirements.txt  session.py
cat.ademic/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.cog/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.llm/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.pol/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.stack/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.survey/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.vader/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
cat.web/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
examples/: .test_all_models.py  Building a Dataset From the Web.ipynb  Classifying Text with Local Models (Ollama).ipynb  Ensemble Classification with Cloud and Local Models.ipynb  Exploring Categories with explore().ipynb  Extracting Categories from Columns of Text.ipynb  Extracting Categories with extract().ipynb  Extracting and Exploring Categories with Local Models (Ollama).py  Summarizing Text and PDF Data.ipynb  __init__.py  test_all_models.ipynb  test_all_models.py  test_all_providers.py  test_batch_mode.py  test_categories_per_call.py  test_embedding_tiebreaker.py  test_explore_corpus.py  test_extract_images.py  test_huggingface_autodetect.py  test_image_ensemble.py  test_image_functions.py  test_image_providers.py  test_multi_class_ensemble.py  test_params_8_12.py  test_pdf_image_mode.py  test_pdf_providers.py  test_pdf_report.py
hf_space/: .gitignore  README.md  app.py  config.py  example_data.csv  requirements.txt  theme.py
hf_summarizer/: app.py  requirements.txt
hooks/: hooks.json
images/: __init__.py
r-package/: README.md  test-all-packages.R
stata-package/: .gitignore  README.md  SSC_SUBMISSION.html  SSC_SUBMISSION.md  catllm.ado  catllm.pkg  catllm.sthlp  catllm_cerad.ado  catllm_cerad.sthlp  catllm_classify.ado  catllm_classify.sthlp  catllm_classify_academic.ado  catllm_classify_academic.sthlp  catllm_classify_social.ado  catllm_classify_social.sthlp  catllm_classify_survey.ado  catllm_classify_survey.sthlp  catllm_explore.ado  catllm_explore.sthlp  catllm_explore_academic.ado  catllm_explore_academic.sthlp  catllm_explore_social.ado  catllm_explore_social.sthlp  catllm_explore_survey.ado  catllm_extract.ado  (+15 more)
(+434 files in other folders)
