[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cat-llm"
dynamic = ["version"]
description = "The CatLLM ecosystem — LLM-powered classification for text, images, and PDFs across domains."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
keywords = ["llm", "classification", "text analysis", "survey", "social media", "academic", "cognitive assessment"]
authors = [
  { name = "Chris Soria", email = "chrissoria@berkeley.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "cat-stack>=0.1.0",
  "cat-survey>=0.1.0",
  "cat-vader>=1.13.0",
  "cat-ademic>=0.1.1",
  "cat-cog>=0.1.0",
  "cat-pol>=0.1.0",
  "cat-web>=0.1.0",
]

[project.optional-dependencies]
pdf = ["cat-stack[pdf]"]
embeddings = ["cat-stack[embeddings]"]
formatter = ["cat-stack[formatter]"]

[project.urls]
Documentation = "https://github.com/chrissoria/cat-llm#readme"
Issues = "https://github.com/chrissoria/cat-llm/issues"
Source = "https://github.com/chrissoria/cat-llm"

[tool.hatch.version]
path = "src/catllm/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/catllm"]

[tool.hatch.build.targets.sdist]
include = [
    "src/catllm/**/*.py",
]
